--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ icons/
 # Ignnore instructions file
 instructions.md
 
+# Environment variables
+.env
+.env.local
+
 # OS generated files
 .DS_Store
 .DS_Store?
