--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,33 @@
-# Ignore icons directory
-icons copyright/
+# Build output
+dist/
+build/
 
-# Ignnore instructions file
-instructions.md
+# Node.js dependencies
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Cypress
+cypress/videos/
+cypress/screenshots/
+
+# Testing
+coverage/
 
 # Environment variables
 .env
 .env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Original copyright content
+icons copyright/
+
+# Instruction files
+instructions.md
 
 # OS generated files
 .DS_Store
@@ -22,9 +43,21 @@ Thumbs.db
 .vscode/
 *.swp
 *.swo
+*.sublime-project
+*.sublime-workspace
 
 # Logs
+logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+
+# Temporary files
+.tmp/
+.temp/
+
+# Cache
+.cache/
+.eslintcache
+.stylelintcache
+
+# Other
+.history/
