--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "game"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
@@ -31,6 +31,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "cypress": "^13.17.0",
+    "fake-indexeddb": "^6.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
