--- a/package.json
+++ b/package.json
@@ -6,14 +6,8 @@
   "scripts": {
     "test": "jest --config=config/jest.config.js --coverage",
     "test:watch": "jest --config=config/jest.config.js --watch",
-    "cypress:open": "cypress open --config-file config/cypress.config.js --browser edge",
-    "cypress:run": "cypress run --config-file config/cypress.config.js --browser edge",
-    "cypress:open:chrome": "cypress open --config-file config/cypress.config.js --browser chrome",
-    "cypress:run:chrome": "cypress run --config-file config/cypress.config.js --browser chrome",
-    "cypress:open:firefox": "cypress open --config-file config/cypress.config.js --browser firefox",
-    "cypress:run:firefox": "cypress run --config-file config/cypress.config.js --browser firefox",
-    "cypress:run:edge": "cypress run --config-file config/cypress.config.js --browser edge",
-    "e2e": "xvfb-run --auto-servernum --server-args=\"-screen 0 1280x1024x24\" cypress run --config-file config/cypress.config.js --browser edge",
+    "e2e": "playwright test playwright --config=config/playwright.config.js",
+    "e2e:headed": "playwright test playwright --config=config/playwright.config.js --headed",
     "start": "node server.js",
     "test:e2e": "npm run start & sleep 2 && npm run e2e",
     "test:all": "npm test && npm run test:e2e",
@@ -32,10 +26,10 @@
   "devDependencies": {
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
+    "@playwright/test": "^1.53.1",
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
-    "cypress": "^13.17.0",
     "fake-indexeddb": "^6.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.3",
